<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:orientation="vertical"
    tools:context="com.udacity.sbjr.myudacityapps.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="My Udacity Apps"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:textSize="30dp" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="30dp" />

    <Button
        android:id="@+id/spotifyapp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/spotifyapp"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary"/>


    <View
        android:layout_width="wrap_content"
        android:layout_height="10dp" />

    <Button
        android:id="@+id/scoresapp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/scoresapp"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary"/>


    <View
        android:layout_width="wrap_content"
        android:layout_height="10dp" />

    <Button
        android:id="@+id/libraryapp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/libraryapp"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary"/>


    <View
        android:layout_width="wrap_content"
        android:layout_height="10dp" />

    <Button
        android:id="@+id/buildapp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/buildapp"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary"/>



    <View
        android:layout_width="wrap_content"
        android:layout_height="10dp" />

    <Button
        android:id="@+id/xyzreaderapp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/xyzreaderapp"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary"/>


    <View
        android:layout_width="wrap_content"
        android:layout_height="10dp" />

    <Button
        android:id="@+id/capstoneapp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/capstoneapp"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary"/>


</LinearLayout>
